--- a/productora-js/src/App.css
+++ b/productora-js/src/App.css
@@ -5,63 +5,33 @@
   font-family: 'Poppins', sans-serif;
   font-weight: 200;  
   color: white;
+}
+body {
   background-color: #121212;
 }
 :root {
   --primary_color: #BB86FC;
   --accent_color: #7C34D5;
   --white: #FFFFFF;
-}
+  --black_unactive: #5E5E5E;
+  --red: #F24848;
 
+}
+.blanco {
+  color: var(--white);
+} .encabezadoSize {
+  font-size: 2rem;
+}
+.btnVioletaRedondo {
+  background-color: var(--accent_color);
+  color: var(--white);
+  border: none;
+  border-radius: 20px;
+  padding: 5px 15px;
+  font-weight: bold;
+}
 .prueba {
-padding-bottom: 2px;
-border-style:solid;
-border-color: purple;
+  padding-bottom: 2px;
+  border-style:solid;
+  border-color: purple;
 }
-
-/* 
-Estilos que vienen por default al crear el proyecto
-.App {
-  text-align: center;
-
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-button {
-  font-size: calc(10px + 2vmin);
-}
- */
