--- a/productora-js/src/styles/userProfile.css
+++ b/productora-js/src/styles/userProfile.css
@@ -1,3 +1,10 @@
+
+#perfilSection > section:first-of-type > img:first-of-type{
+    width: 80%;
+    display: block;
+    max-width: 250px;
+    border-radius: 100%;
+}
 #formProfileEdit {    
     align-content: flex-start;
     justify-content: space-between;
@@ -27,7 +34,7 @@
     -webkit-text-fill-color: var(--black_unactive);
     -webkit-box-shadow: inset 0 0 0px 1000px #121212;
     box-shadow: inset 0 0 0px 1000px #121212;
-    color: var(--black_unactive);
+    color: var(--white);
     border: 1px solid var(--black_unactive);
 } #formProfileEdit > fieldset > div:first-of-type {
     margin-right: 15px;
@@ -35,6 +42,16 @@
     margin-bottom: 10px;
 } .row {
     flex-wrap: nowrap
+} .capitalize {
+    text-transform: capitalize;
+}
+
+@media screen and (max-width: 767px) {
+    #perfilSection > section:first-of-type {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    } 
 }
 
 @media screen and (min-width: 768px) {
@@ -43,10 +60,7 @@
         flex-direction: row;
     } #perfilSection > section:nth-of-type(2) {
         margin-left: 20px;
-    } 
-}
-
-@media screen and (min-width: 768px) {
+    }
     #perfilSection {
         display: flex;
         justify-content: center; 
