--- a/productora-js/src/styles/userProfile.css
+++ b/productora-js/src/styles/userProfile.css
@@ -1,9 +1,52 @@
-
-#perfilSection > section:first-of-type > img:first-of-type{
+body {
+    position: relative;
+}
+#perfilSection > section:first-of-type {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}#perfilSection > section:first-of-type > article:first-of-type > img:first-of-type{
     width: 80%;
     display: block;
     max-width: 250px;
+    margin-left: calc(1.8rem + 10px);
     border-radius: 100%;
+} #perfilSection > section:first-of-type > button{
+    margin: 20px 0px;
+    display: block;
+    max-width: 200px;
+} #perfilSection > section:first-of-type > article:first-of-type{
+    position: relative;
+} #perfilSection > section:first-of-type > article:first-of-type > div:first-of-type{
+    z-index: 4;
+    border-radius: 100%;
+    padding: 5px;
+    background-color: var(--primary_color);
+    border: 3px solid #121212;
+    width: calc(1.8rem + 10px);
+    height: calc(1.8rem + 10px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 15px;
+    right: 10%;
+} #perfilSection > section:first-of-type  > div:nth-of-type(1) button{
+    display: block;
+    padding: 5px 10px;
+    background-color: transparent;
+    min-width: 250px;
+    max-width: 350px;
+} #perfilSection > section:first-of-type  > div:nth-of-type(1) button:first-of-type {
+    border:  1px solid var(--black_unactive);
+} #perfilSection > section:first-of-type  > div:nth-of-type(1) button:not(:first-of-type){
+    border-top:  none;
+    border-left:  1px solid var(--black_unactive);
+    border-right:  1px solid var(--black_unactive);
+    border-bottom:  1px solid var(--black_unactive);
+}  #perfilSection > section:first-of-type  > div:nth-of-type(1) button:hover{
+    background-color: var(--primary_color);
+    color: #121212;
 }
 #formProfileEdit {    
     align-content: flex-start;
@@ -44,26 +87,83 @@
     flex-wrap: nowrap
 } .capitalize {
     text-transform: capitalize;
+} 
+#modalForPic, #modalForSession{
+    display: none;
+}
+.modalOverlay {
+    width: 100%;
+    height: 100vh;
+    background-color: #0606069c;
+    position: fixed;
+    top: 0%;
+    z-index: 10;
+    align-items: center;
+    justify-content: center;
+} .modalOverlay > article{
+    width: 80%;
+    max-width: 800px;
+    min-height: 250px;
+    background-color: #1e1e1e;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    padding: 50px 20px;
+}  .modalOverlay > article > div > button{
+    background-color: transparent;
+    border: none;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+} #modalForPic > article > label{
+    display: block;
+    margin-bottom: 20px;
+    font-weight: bold;
+} #modalForPic > article > input[type="file"]{
+    display: block;
+    background-color: transparent;
+} #modalForPic > article > input[type="file"] {
+    color: transparent;
+}
+#modalForPic > article > input[type="file"]::-webkit-file-upload-button {
+    visibility: hidden;
+}
+#modalForPic > article > input[type="file"]::before {
+    content: 'Seleccionar archivo';
+    background-color: var(--accent_color);
+    color: var(--white);
+    border: none;
+    border-radius: 20px;
+    padding: 5px 15px;
+    font-weight: bold;
 }
 
 @media screen and (max-width: 767px) {
-    #perfilSection > section:first-of-type {
+    #perfilSection > section {
         display: flex;
         flex-direction: column;
         align-items: center;
-    } 
+    } #perfilSection > section:nth-of-type(2) {
+        margin-top: 30px;
+        margin-bottom: 40px;
+    }
 }
 
 @media screen and (min-width: 768px) {
     #perfilSection {
         display: flex;
+        justify-content: center; 
         flex-direction: row;
+        align-items: flex-start;
     } #perfilSection > section:nth-of-type(2) {
         margin-left: 20px;
     }
-    #perfilSection {
-        display: flex;
-        justify-content: center; 
-        align-items: center;
-    } 
+} 
+@media screen and (min-width: 890px) {
+    #perfilSection > section {
+        padding: 20px;
+    }
 }
