Frontend UserProfile + funcionalidad useState + Nosotros

--- a/productora-js/src/App.css
+++ b/productora-js/src/App.css
@@ -21,6 +21,8 @@ body {
   color: var(--white);
 } .encabezadoSize {
   font-size: 2rem;
+} .capitalize {
+  text-transform: capitalize;
 }
 .btnVioletaRedondo {
   background-color: var(--accent_color);
