--- a/productora-js/src/styles/userProfile.css
+++ b/productora-js/src/styles/userProfile.css
@@ -7,6 +7,8 @@ body {
     align-items: center;
 }#perfilSection > section:first-of-type > article:first-of-type > img:first-of-type{
     width: 80%;
+    height: 80%;
+    max-height: 250px;
     display: block;
     max-width: 250px;
     margin-left: calc(1.8rem + 10px);
@@ -17,7 +19,7 @@ body {
     max-width: 200px;
 } #perfilSection > section:first-of-type > article:first-of-type{
     position: relative;
-} #perfilSection > section:first-of-type > article:first-of-type > div:first-of-type{
+} #perfilSection > section:first-of-type > article:first-of-type > button:first-of-type{
     z-index: 4;
     border-radius: 100%;
     padding: 5px;
@@ -54,11 +56,6 @@ body {
     flex-direction: column;
 } #formProfileEdit button {    
     margin-top: 10px;
-} #formProfileEdit fieldset {
-    display: flex;    
-    align-items: flex-start;
-    flex-direction: row;
-    align-content: space-between;
 } #formProfileEdit label {
     display: block;
 } #formProfileEdit input {
@@ -70,7 +67,7 @@ body {
 } #formProfileEdit input:invalid {
     color: var(--red);
     border: 1px solid var(--red);
-} #formProfileEdit input:focus {
+} #formProfileEdit input:focus,  #formProfileEdit input:active {
     color: var(--white);
     border: 1px solid var(--white);
 } :-webkit-autofill, :-webkit-autofill:hover, :-webkit-autofill:focus {
@@ -85,13 +82,20 @@ body {
     margin-bottom: 10px;
 } .row {
     flex-wrap: nowrap
-} .capitalize {
-    text-transform: capitalize;
-} 
-#modalForPic, #modalForSession{
-    display: none;
+} .btnSecundario {
+  background-color: transparent;
+  color: var(--black_unactive);
+  border: none;
+  font-weight: bold;
+} .btnSecundario:hover, .btnSecundario:active{
+    color: var(--white);
+} #perfilSection > section:first-of-type > p:first-of-type {
+    text-align: center;
 }
-.modalOverlay {
+/*Overlays*/
+#modalForPic, #modalForSession, #modalForExit, #modalDeletePic{
+    display: none;
+} .modalOverlay {
     width: 100%;
     height: 100vh;
     background-color: #0606069c;
@@ -112,13 +116,17 @@ body {
     justify-content: center;
     position: relative;
     padding: 50px 20px;
-}  .modalOverlay > article > div > button{
+}  .modalOverlay > article > div:first-of-type > button{
     background-color: transparent;
     border: none;
     position: absolute;
     top: 20px;
     right: 20px;
-} #modalForPic > article > label{
+} .encabezadoModal {
+    font-size: 1.3rem;
+}
+
+#modalForPic > article > label{
     display: block;
     margin-bottom: 20px;
     font-weight: bold;
@@ -139,8 +147,15 @@ body {
     border-radius: 20px;
     padding: 5px 15px;
     font-weight: bold;
-}
-
+} #modalForExit > article > div:nth-of-type(2), #modalDeletePic > article > div:nth-of-type(2) {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+} #modalForExit > article > div:nth-of-type(2) > button, #modalDeletePic > article > div:nth-of-type(2) > button {
+    display: block;
+}  #modalForExit > article >  div:nth-of-type(2) > button:not(:first-of-type), #modalDeletePic > article > div:nth-of-type(2) > button:not(:first-of-type) {
+    margin-left: 20px;
+} 
 @media screen and (max-width: 767px) {
     #perfilSection > section {
         display: flex;
@@ -149,7 +164,11 @@ body {
     } #perfilSection > section:nth-of-type(2) {
         margin-top: 30px;
         margin-bottom: 40px;
-    }
+    } #formProfileEdit > fieldset > div > label{
+        margin-top: 2.5px;
+    }  #formProfileEdit > fieldset > div > input{
+        margin-bottom: 2.5px;
+    } 
 }
 
 @media screen and (min-width: 768px) {
@@ -160,7 +179,12 @@ body {
         align-items: flex-start;
     } #perfilSection > section:nth-of-type(2) {
         margin-left: 20px;
-    }
+    } #formProfileEdit fieldset {
+        display: flex;    
+        align-items: flex-start;
+        flex-direction: row;
+        align-content: space-between;
+    } 
 } 
 @media screen and (min-width: 890px) {
     #perfilSection > section {
