--- a/productora-js/src/App.css
+++ b/productora-js/src/App.css
@@ -21,7 +21,12 @@ body {
   color: var(--white);
 } .encabezadoSize {
   font-size: 2rem;
-} .capitalize {
+} .subtitulo {
+  color: var(--primary_color);
+  font-size: 1.7rem;
+  padding: 0%;
+  margin: 10px 0px;
+}.capitalize {
   text-transform: capitalize;
 }
 .btnVioletaRedondo {
