--- a/productora-js/src/styles/nosotros.css
+++ b/productora-js/src/styles/nosotros.css
@@ -13,58 +13,70 @@ header {
     align-items: center;
     flex-direction: column;
     position: relative;
-} header div:first-of-type {
+} header > div:first-of-type {
     width: 100%;
     position: absolute;
     top: 0px;
     left: 0px;
     height: 100%;
     background: linear-gradient(141deg, rgba(0, 0, 0, 0.408) 0%, rgb(0, 0, 0) 100%);
-} header p {
+} header > p {
     z-index: 2;
     padding: 0px;
     text-align: center;
-} header p:first-of-type {
+} header > p:first-of-type {
     margin: 20px 0px;
-} header p:nth-of-type(2) {
+} header > p:nth-of-type(2) {
     margin-bottom: 10px;
-} header p:not(:first-of-type) {
-    font-size: 1.7rem;
 }
 main {
     padding: 4vh 5vw;
     width: 100%;
+}  main > article:first-of-type > section {
+    margin-bottom: 40px;
 }
 
 
 @media screen and (max-width: 720px) {
-    main  > article:first-of-type > section:first-of-type {
+    main > article:first-of-type > section {
         display: flex;
         justify-content: center;
         align-content: center;
         align-items: center;
         flex-direction: column;
-    } main > article:first-of-type > section:first-of-type > div {
+    } main > article:first-of-type > section > div {
         width: 90%;
-    } main > article:first-of-type > section:first-of-type > div > img {
+    } main > article:first-of-type > section > div > img {
         width: 100%;
     }
 }
 @media screen and (min-width: 721px) {
-    main section:first-of-type {
+    main section:nth-of-type(odd) {
         display: flex;
         justify-content: center;
         flex-direction: row;
         align-content: center;
         align-items: center;
         width: 100%;
-    }  main  > article:first-of-type > section:first-of-type > div > img {
+    } main section:nth-of-type(even) {
+        display: flex;
+        justify-content: center;
+        flex-direction: row-reverse;
+        align-content: center;
+        align-items: center;
+        width: 100%;
+    }  main  > article:first-of-type > section > div > img {
         display: inline-block;
         width: 100%;
-    }  main > article:first-of-type > section:first-of-type > div {
+    }  main > article:first-of-type > section:nth-of-type(odd) > div {
         width: 60%;
         min-width: 300px;
         max-width: 700px;
         padding-left: 20px;
+    } main > article:first-of-type > section:nth-of-type(even) > div {
+        width: 50%;
+        min-width: 300px;
+        max-width: 700px;
+        padding-right: 20px;
     }
 }
