--- a/productora-js/src/styles/nosotros.css
+++ b/productora-js/src/styles/nosotros.css
@@ -28,6 +28,8 @@ header {
     margin: 20px 0px;
 } header > p:nth-of-type(2) {
     margin-bottom: 10px;
+    font-family: 'Gugi', cursive;
+    text-transform: uppercase;
 }
 main {
     padding: 4vh 5vw;
