--- a/productora-js/src/App.css
+++ b/productora-js/src/App.css
@@ -42,7 +42,7 @@ body {
   border-style:solid;
   border-color: purple;
 }
-
+/*NavBar*/
 nav {
   display: flex;
   justify-content: space-between;
@@ -71,16 +71,37 @@ nav {
   line-height: 0%;
   padding: 0%;
   margin: 0px 0px 0px 10px;
-}  nav > ul {
+}  nav > ul, footer  > section > ul {
   list-style: none;
   display: inline-block;
   padding: 0%;
   margin: 0%;
-} nav > ul > li{
+} nav > ul > li, footer  > section > ul > li{
   display: inline-block;
-} nav > ul > li:not(:first-of-type){
+} nav > ul > li:not(:first-of-type),  footer > section > ul > li:not(:first-of-type) {
   margin-left: 10px;
 } nav > ul > li:first-of-type > button{
   background-color: transparent;
   border: none;
 } 
+/*Footer*/
+footer > section {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+} 
+footer > section >div > p {
+  padding: 0%;
+  margin: 0%;
+}
+footer {
+  margin-top: 50px ;
+  width: 100%;
+} footer > section:first-of-type{
+  background-color: #393939;
+  padding: 0.8rem
+  
+}
