--- a/productora-js/src/styles/homepage.css
+++ b/productora-js/src/styles/homepage.css
@@ -1,3 +1,15 @@
+:root {
+    --size: 100px; /*Chart size*/
+    --bord: 10px;
+}
+.margin_wholePage {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
 #banner {
     background-image: url();
     background-color: rgb(101, 101, 101);
@@ -20,18 +32,122 @@
     padding: 0%;
     margin: 0%;
 } .ctn_page {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    align-content: flex-start;
     width: 100%;
     max-width: 980px;
-} .ctn_page > article:first-of-type, .ctn_page > article:not(:first-of-type) > div:nth-of-type(2){
+} .ctn_page > article:not(:first-of-type) > div:nth-of-type(2){
     display: flex;
     flex-direction: row;
     width: 100%;
 }
 .ctn_page > article {
     border-bottom: 1px solid #5E5E5E;
+} 
+.ctn_page > article:first-of-type > div:first-of-type > img{
+    width: 100%;
+    background-color: white;
+    padding: 20px;
+    border-radius: 100%;
 }
+
+/*Porcentaje de skills*/
+#ctn_skills > div:nth-of-type(2){
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+} .chart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: calc(var(--size) + 20px);
+    align-content: center;
+} .row>* {
+    flex-shrink: 0;
+    max-width: 100%;
+    padding-right: calc(var(--bs-gutter-x) * .5);
+    padding-left: calc(var(--bs-gutter-x) * .5);
+    margin-top: var(--bs-gutter-y);}
+.chart > div:first-of-type{
+    width: var(--size);
+    height: var(--size);
+    margin: 1em auto;
+    border-radius: 50%;
+    background-image: conic-gradient(var(--accent_color) var(--value), #C4C4C4 var(--value));
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+} .chart > div:first-of-type::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: calc(100% - var(--bord));
+    height: calc(100% - var(--bord));
+    background: var(--black);
+    border-radius: inherit;
+} .chart  > div:first-of-type > p {
+    position: relative;
+    z-index: 1;
+    font-size: 1rem;
+    font-weight: bold;
+} .x-100 {
+    --value: 100%;
+} .x-90 {
+    --value: 90%;
+} .x-80 {
+    --value: 80%;
+} .x-70 {
+    --value:70%;
+} .x-60 {
+    --value: 60%;
+} .x-50 {
+    --value: 50%;
+} .x-40 {
+    --value: 40%;
+} .x-30 {
+    --value: 30%;
+} .x-20 {
+    --value: 20%;
+} .x-10 {
+    --value: 10%;
+} .skills_text {
+    font-size: 1rem;
+    font-weight: bold;
+    color: var(--primary_color);
+}
+
+@media screen and (max-width: 820px) {
+    .ctn_page > article:first-of-type > div:first-of-type {
+        max-width: 200px;
+        display: flex;
+        justify-content: center;
+        margin: 20px 0px;
+        align-items: center;
+    } .ctn_page > article:first-of-type {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        align-content: center;
+    }  .ctn_page {
+        padding: 0px 20px;
+    } 
+} @media screen and (min-width: 820px) {
+    .ctn_page > article:first-of-type > div:first-of-type {
+        width: 40%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+    } .ctn_page > article:first-of-type {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+    } 
+} 
