--- a/productora-js/src/styles/homepage.css
+++ b/productora-js/src/styles/homepage.css
@@ -4,6 +4,7 @@
 }
 .margin_wholePage {
     width: 100%;
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -50,7 +51,7 @@
 }
 
 /*Porcentaje de skills*/
-#ctn_skills > div:nth-of-type(2){
+#ctn_skills > div:nth-of-type(2), #ctn_confian{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -61,15 +62,17 @@
     align-items: center;
     width: calc(var(--size) + 20px);
     align-content: center;
-} .row>* {
+}.row>* {
     flex-shrink: 0;
     max-width: 100%;
     padding-right: calc(var(--bs-gutter-x) * .5);
     padding-left: calc(var(--bs-gutter-x) * .5);
     margin-top: var(--bs-gutter-y);}
-.chart > div:first-of-type{
+.chart > div:first-of-type, .confian {
     width: var(--size);
     height: var(--size);
+}
+.chart > div:first-of-type {
     margin: 1em auto;
     border-radius: 50%;
     background-image: conic-gradient(var(--accent_color) var(--value), #C4C4C4 var(--value));
@@ -118,6 +121,18 @@
     font-weight: bold;
     color: var(--primary_color);
 }
+.spaceBetween {
+    justify-content: space-between;
+    width: 100%;
+    display: flex;
+}
+.confian {
+    background-color: #C4C4C4;
+    border-radius: 100%;
+    margin-bottom: 10px;
+} .confian img{
+    width: 100%;
+} 
 
 @media screen and (max-width: 820px) {
     .ctn_page > article:first-of-type > div:first-of-type {
